@@ -1,3 +1,7 @@
+2009-01-06  kokosabu  <kokosabu@gmail.com>
+
+        * FileBinaryInputPort: stream to file descriptor.
+
 2009-01-06  higepon  <higepon@users.sourceforge.jp>
 
         * Added %exec. Not *Tested* yet.
